syntax = "proto3";

package hive.registry.v1;


message ServiceRegistration {
  string id = 1;
  string name = 2;
  string version = 3;
  string timestamp = 4; // time created
  repeated string tags = 5;
  map<string, string> metadata = 6; 
  repeated Endpoint endpoints = 7;
}

message Endpoint {
  string host = 1;
  int32 port = 2;
  string protocol = 3;
  map<string, string> metadata = 4; 
}

message RegisterServiceRequest {
  string name = 1;
  string version = 2;
  repeated string tags = 3;
  map<string, string> metadata = 4; 
  repeated Endpoint endpoints = 5;
}

message Empty {
}

message QueryServicesRequest {
  repeated string tags = 1;
  optional string name = 2;
  optional string version = 3;
  map<string, string> metadata = 4; 
}

message ListServicesResponse {
  repeated ServiceRegistration services = 1;
}

message UnregisterServiceRequest {
  string id = 1;
}

message StorageStatus {
  string type = 1;
  bool healthy = 2;
}

enum ServiceStatus {
  UNKNOWN = 0;
  HEALTHY = 1;
  UNHEALTHY = 2;
}

message ServiceHealthResponse {
  ServiceStatus status = 1;
  string timestamp = 2;
  int32 uptime = 3;
  StorageStatus storage = 4;
}

// Heartbeat Messages
message HeartbeatRequest {
  string serviceId = 1;
  repeated string tags = 2;
  map<string, string> metadata = 3; 
  repeated Endpoint endpoints = 4;
}

message HeartbeatResponse {
  bool acknowledged = 1;
  string message = 2;
  ServiceRegistration service = 3;
}

service Registry {
  rpc RegisterService (RegisterServiceRequest) returns (ServiceRegistration);
  rpc GetService (QueryServicesRequest) returns (ServiceRegistration);
  rpc ListServices (QueryServicesRequest) returns (ListServicesResponse);
  rpc UnregisterService (UnregisterServiceRequest) returns (ServiceRegistration);
  rpc HealthCheck (Empty) returns (ServiceHealthResponse);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
}
